src/test/resources/ok/escapes_new.mc
int main() {
  printChar('A');
  printChar('\n');
  printString("B\n");
  return 0;
}
