src/test/resources/errors/bad_string.mc
int main() {
  string s = "hola;
  return 0;
}
